--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
   <header class="bg-success-subtle">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
+
         <div class="col">
           <div class="text-white">
             START BOOTSTRAP
           </div>
         </div>
         <div class="col">
-          <div class="hamburger text-end d-sm-block d-md-none">Hamburger</div>
-          <nav class="menu d-sm-none d-md-block">
+          <div class="hamburger text-end d-md-none">Hamburger</div>
+          <nav class="menu d-none d-md-block">
             <ul class="d-flex text-white justify-content-end">
               <li>
                 <a href="#" class="link-light">PROFILO</a>
@@ -29,7 +30,7 @@
                 <a href="#" class="link-light ps-4">ABOUT</a>
               </li>
               <li>
-                <a href="#" class="link-light ps-4">CONTANT</a>
+                <a href="#" class="link-light ps-4">CONTACT</a>
               </li>
             </ul>
           </nav>
@@ -38,6 +39,29 @@
       </div>
     </div>
   </header>
+
+  <main>
+    <section class="hero bg-success">
+      <div class="container h-100">
+        <div class="row h-100 ">
+
+          <div class="col-12">
+            img
+          </div>
+          <div class="col-12">
+            START BOOTSTRAP
+          </div>
+          <div class="col-12">
+            -STELLA-
+          </div>
+          <div class="col-12">
+            GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+          </div>
+
+        </div>
+      </div>
+    </section>
+  </main>
 
 </body>
 </html>
