[add] card-main

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="hamburger text-end d-md-none">Hamburger</div>
+          <div class="hamburger text-white text-end d-md-none">Hamburger</div>
           <nav class="menu d-none d-md-block">
             <ul class="d-flex text-white justify-content-end">
               <li>
@@ -42,22 +42,117 @@
 
   <main>
     <section class="hero bg-success">
-      <div class="container h-100">
-        <div class="row h-100 ">
+      <div class="container_hero h-100">
+        <div class="row h-100">
 
           <div class="col-12">
-            img
+            <div class="d-flex text-white justify-content-center">
+              img
+            </div>
           </div>
           <div class="col-12">
-            START BOOTSTRAP
+            <div class="d-flex text-white justify-content-center ">
+              START BOOTSTRAP
+            </div>
           </div>
           <div class="col-12">
-            -STELLA-
+            <div class="d-flex text-white justify-content-center">
+              -STELLA-
+            </div>
           </div>
           <div class="col-12">
-            GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+            <div class="d-flex text-white justify-content-center">
+              GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+            </div>
           </div>
 
+        </div>
+      </div>
+    </section>
+
+    <section class="porfolio">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-4 offset-4">
+            <div class="d-flex justify-content-center">
+              PORTFOLIO
+            </div>
+          </div>
+          <div class="col-4 offset-4">
+            <div class="d-flex justify-content-center ">
+              -STELLA-
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+
+    <section class="cards bg-success-subtle">
+      <div class="container text-center">
+        <div class="row align-items-start">
+
+          <div class="col col-sm-12 col-md-6 col-xl-4">
+            One of three columns
+          </div>
+          <div class="col col-sm-12 col-md-6 col-xl-4">
+            One of three columns
+          </div>
+          <div class="col col-sm-12 col-md-6 col-xl-4">
+            One of three columns
+          </div>
+          <div class="col col-sm-12 col-md-6 col-xl-4">
+            One of three columns
+          </div>
+          <div class="col col-sm-12 col-md-6 col-xl-4">
+            One of three columns
+          </div>
+          <div class="col col-sm-12 col-md-6 col-xl-4">
+            One of three columns
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
+    <section class="about bg-success">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-4 offset-4">
+            <div class="d-flex justify-content-center">
+              ABOUT
+            </div>
+          </div>
+          <div class="col-4 offset-4">
+            <div class="d-flex justify-content-center ">
+              -STELLA-
+            </div>
+          </div>
+
+          <div class="col col-md-6">
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores at, a cum rerum eos quis unde rem repudiandae nisi ab.
+              </p>
+            </div>
+          </div>
+          <div class="col col-md-6">
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores at, a cum rerum eos quis unde rem repudiandae nisi ab.
+              </p>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="d-flex justify-content-center">
+              <a href="#">Download</a>
+            </div>
+          </div>
+          
         </div>
       </div>
     </section>
