[add] contactme-blocks-main

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
       </div>
     </section>
 
-    <section class="porfolio">
+    <section class="porfolio bg-success-subtle">
       <div class="container">
         <div class="row">
 
-          <div class="col-4 offset-4">
+          <div class="col-12">
             <div class="d-flex justify-content-center">
               PORTFOLIO
             </div>
           </div>
-          <div class="col-4 offset-4">
+          <div class="col-12">
             <div class="d-flex justify-content-center ">
               -STELLA-
             </div>
@@ -121,41 +121,48 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-4 offset-4">
+          <div class="col-12">
             <div class="d-flex justify-content-center">
               ABOUT
             </div>
           </div>
-          <div class="col-4 offset-4">
+          <div class="col-12">
             <div class="d-flex justify-content-center ">
               -STELLA-
             </div>
           </div>
 
-          <div class="col col-md-6">
+          <div class="col-12">
             <div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores at, a cum rerum eos quis unde rem repudiandae nisi ab.
-              </p>
+              Name
+              <hr>
             </div>
           </div>
-          <div class="col col-md-6">
+          <div class="col-12">
             <div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores at, a cum rerum eos quis unde rem repudiandae nisi ab.
-              </p>
+              Email Addres
+              <hr>
+            </div>
+          </div>
+          <div class="col-12">
+            <div>
+              Phone Number
+              <hr>
+            </div>
+          </div>
+          <div class="col-12">
+            <div>
+              Message
             </div>
           </div>
 
-          <div class="col">
-            <div class="d-flex justify-content-center">
-              <a href="#">Download</a>
-            </div>
-          </div>
           
         </div>
       </div>
     </section>
+
+
+
   </main>
 
 </body>
