[add] blocks-footer

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
   </header>
 
   <main>
+    <!-- hero -->
     <section class="hero bg-success">
-      <div class="container_hero h-100">
+      <div class="container h-100">
         <div class="row h-100">
 
           <div class="col-12">
@@ -70,6 +71,7 @@
       </div>
     </section>
 
+      <!-- portfolio -->
     <section class="porfolio bg-success-subtle">
       <div class="container">
         <div class="row">
@@ -89,41 +91,85 @@
       </div>
     </section>
 
+    <!-- cards -->
     <section class="cards bg-success-subtle">
-      <div class="container text-center">
-        <div class="row align-items-start">
+      <div class="container">
+        <div class="row">
 
-          <div class="col col-sm-12 col-md-6 col-xl-4">
+          <div class="col-sm-12 col-md-6 col-xl-4">
             One of three columns
           </div>
-          <div class="col col-sm-12 col-md-6 col-xl-4">
+          <div class="col-sm-12 col-md-6 col-xl-4">
             One of three columns
           </div>
-          <div class="col col-sm-12 col-md-6 col-xl-4">
+          <div class="col-sm-12 col-md-6 col-xl-4">
             One of three columns
           </div>
-          <div class="col col-sm-12 col-md-6 col-xl-4">
+          <div class="col-sm-12 col-md-6 col-xl-4">
             One of three columns
           </div>
-          <div class="col col-sm-12 col-md-6 col-xl-4">
+          <div class="col-sm-12 col-md-6 col-xl-4">
             One of three columns
           </div>
-          <div class="col col-sm-12 col-md-6 col-xl-4">
+          <div class="col-sm-12 col-md-6 col-xl-4">
             One of three columns
           </div>
-
         </div>
 
       </div>
     </section>
 
-    <section class="about bg-success">
+    <!-- about -->
+    <section class="about">
       <div class="container">
         <div class="row">
 
           <div class="col-12">
             <div class="d-flex justify-content-center">
               ABOUT
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="d-flex justify-content-center ">
+              -STELLA-
+            </div>
+          </div>
+
+          <div class="col-md-6 text-white ">
+            <div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque temporibus est vero ratione ut nostrum sequi esse molestias iure deleniti labore ipsum aliquam aspernatur, incidunt illum? Molestias, quaerat. Esse, commodi.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 text-white ">
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi enim minus ut quam tempore tempora, pariatur placeat laudantium quos architecto! Dignissimos, fugit impedit pariatur labore possimus fuga corrupti iure fugiat.
+              </p>
+            </div>
+          </div>
+
+        <div class="row">
+          <div class="col">
+            <div class="d-flex justify-content-center">
+              <button>Download</button>
+            </div>
+          </div>
+        </div>
+          
+        </div>
+      </div>
+    </section>
+
+    <!-- contact -->
+    <section class="contact bg-success">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-12">
+            <div class="d-flex justify-content-center">
+              CONTACT ME
             </div>
           </div>
           <div class="col-12">
@@ -156,11 +202,55 @@
             </div>
           </div>
 
-          
+          <div class="col-12">
+            <div>
+              <button>Send</button>
+              <hr>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
 
+    <!-- footer -->
+    <section class="footer_top bg-success-subtle">
+      <div class="container text-center">
+        <div class="row">
+
+          <div class="col-sm-12 col-md-4">
+            <div class="text-white">
+              LOCATION
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <div class="text-white">
+              AROUND THE WEB
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <div class="text-white">
+              ABOUT FREELANCER
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="footer_bottom bg-success">
+      <div class="container text-center ">
+        <div class="row">
+
+          <div class="col">
+            <div class="text-white">
+              LOCATION
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
 
   </main>
